lib/pdfio_bindings_generated.dart


  int pdfioDictSetNumber(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    double value,
  ) {
    return _pdfioDictSetNumber(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetNumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Double)>>('pdfioDictSetNumber');
  late final _pdfioDictSetNumber = _pdfioDictSetNumberPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>, double)>();

  int pdfioDictSetObj(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<pdfio_obj_t> value,
  ) {
    return _pdfioDictSetObj(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_obj_t>)>>('pdfioDictSetObj');
  late final _pdfioDictSetObj = _pdfioDictSetObjPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_obj_t>)>();

  int pdfioDictSetRect(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<pdfio_rect_t> value,
  ) {
    return _pdfioDictSetRect(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetRectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>)>>('pdfioDictSetRect');
  late final _pdfioDictSetRect = _pdfioDictSetRectPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_rect_t>)>();

  int pdfioDictSetString(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioDictSetString(
      dict,
      key,
      value,
    );
  }

  late final _pdfioDictSetStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictSetString');
  late final _pdfioDictSetString = _pdfioDictSetStringPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int pdfioDictSetStringf(
    ffi.Pointer<pdfio_dict_t> dict,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> format,
  ) {
    return _pdfioDictSetStringf(
      dict,
      key,
      format,
    );
  }

  late final _pdfioDictSetStringfPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pdfioDictSetStringf');
  late final _pdfioDictSetStringf = _pdfioDictSetStringfPtr.asFunction<
      int Function(ffi.Pointer<pdfio_dict_t>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int pdfioFileClose(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileClose(
      pdf,
    );
  }

  late final _pdfioFileClosePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_file_t>)>>(
          'pdfioFileClose');
  late final _pdfioFileClose =
      _pdfioFileClosePtr.asFunction<int Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_file_t> pdfioFileCreate(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.Char> version,
    ffi.Pointer<pdfio_rect_t> media_box,
    ffi.Pointer<pdfio_rect_t> crop_box,
    pdfio_error_cb_t error_cb,
    ffi.Pointer<ffi.Void> error_data,
  ) {
    return _pdfioFileCreate(
      filename,
      version,
      media_box,
      crop_box,
      error_cb,
      error_data,
    );
  }

  late final _pdfioFileCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_file_t> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>,
              ffi.Pointer<pdfio_rect_t>,
              pdfio_error_cb_t,
              ffi.Pointer<ffi.Void>)>>('pdfioFileCreate');
  late final _pdfioFileCreate = _pdfioFileCreatePtr.asFunction<
      ffi.Pointer<pdfio_file_t> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_rect_t>,
          ffi.Pointer<pdfio_rect_t>,
          pdfio_error_cb_t,
          ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileCreateArrayObj(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_array_t> array,
  ) {
    return _pdfioFileCreateArrayObj(
      pdf,
      array,
    );
  }

  late final _pdfioFileCreateArrayObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_array_t>)>>('pdfioFileCreateArrayObj');
  late final _pdfioFileCreateArrayObj = _pdfioFileCreateArrayObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_array_t>)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileCreateNumberObj(
    ffi.Pointer<pdfio_file_t> pdf,
    double number,
  ) {
    return _pdfioFileCreateNumberObj(
      pdf,
      number,
    );
  }

  late final _pdfioFileCreateNumberObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Double)>>('pdfioFileCreateNumberObj');
  late final _pdfioFileCreateNumberObj =
      _pdfioFileCreateNumberObjPtr.asFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_file_t>, double)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileCreateObj(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_dict_t> dict,
  ) {
    return _pdfioFileCreateObj(
      pdf,
      dict,
    );
  }

  late final _pdfioFileCreateObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_dict_t>)>>('pdfioFileCreateObj');
  late final _pdfioFileCreateObj = _pdfioFileCreateObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_dict_t>)>();

  ffi.Pointer<pdfio_file_t> pdfioFileCreateOutput(
    pdfio_output_cb_t output_cb,
    ffi.Pointer<ffi.Void> output_ctx,
    ffi.Pointer<ffi.Char> version,
    ffi.Pointer<pdfio_rect_t> media_box,
    ffi.Pointer<pdfio_rect_t> crop_box,
    pdfio_error_cb_t error_cb,
    ffi.Pointer<ffi.Void> error_data,
  ) {
    return _pdfioFileCreateOutput(
      output_cb,
      output_ctx,
      version,
      media_box,
      crop_box,
      error_cb,
      error_data,
    );
  }

  late final _pdfioFileCreateOutputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_file_t> Function(
              pdfio_output_cb_t,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>,
              ffi.Pointer<pdfio_rect_t>,
              pdfio_error_cb_t,
              ffi.Pointer<ffi.Void>)>>('pdfioFileCreateOutput');
  late final _pdfioFileCreateOutput = _pdfioFileCreateOutputPtr.asFunction<
      ffi.Pointer<pdfio_file_t> Function(
          pdfio_output_cb_t,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<pdfio_rect_t>,
          ffi.Pointer<pdfio_rect_t>,
          pdfio_error_cb_t,
          ffi.Pointer<ffi.Void>)>();

  /// TODO: Add number, array, string, etc. versions of pdfioFileCreateObject?
  ffi.Pointer<pdfio_stream_t> pdfioFileCreatePage(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_dict_t> dict,
  ) {
    return _pdfioFileCreatePage(
      pdf,
      dict,
    );
  }

  late final _pdfioFileCreatePagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_stream_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_dict_t>)>>('pdfioFileCreatePage');
  late final _pdfioFileCreatePage = _pdfioFileCreatePagePtr.asFunction<
      ffi.Pointer<pdfio_stream_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_dict_t>)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileCreateStringObj(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _pdfioFileCreateStringObj(
      pdf,
      s,
    );
  }

  late final _pdfioFileCreateStringObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioFileCreateStringObj');
  late final _pdfioFileCreateStringObj =
      _pdfioFileCreateStringObjPtr.asFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<pdfio_file_t> pdfioFileCreateTemporary(
    ffi.Pointer<ffi.Char> buffer,
    int bufsize,
    ffi.Pointer<ffi.Char> version,
    ffi.Pointer<pdfio_rect_t> media_box,
    ffi.Pointer<pdfio_rect_t> crop_box,
    pdfio_error_cb_t error_cb,
    ffi.Pointer<ffi.Void> error_data,
  ) {
    return _pdfioFileCreateTemporary(
      buffer,
      bufsize,
      version,
      media_box,
      crop_box,
      error_cb,
      error_data,
    );
  }

  late final _pdfioFileCreateTemporaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_file_t> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>,
              ffi.Pointer<pdfio_rect_t>,
              pdfio_error_cb_t,
              ffi.Pointer<ffi.Void>)>>('pdfioFileCreateTemporary');
  late final _pdfioFileCreateTemporary =
      _pdfioFileCreateTemporaryPtr.asFunction<
          ffi.Pointer<pdfio_file_t> Function(
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<pdfio_rect_t>,
              ffi.Pointer<pdfio_rect_t>,
              pdfio_error_cb_t,
              ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<pdfio_obj_t> pdfioFileFindObj(
    ffi.Pointer<pdfio_file_t> pdf,
    int number,
  ) {
    return _pdfioFileFindObj(
      pdf,
      number,
    );
  }

  late final _pdfioFileFindObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_file_t>, ffi.Int)>>('pdfioFileFindObj');
  late final _pdfioFileFindObj = _pdfioFileFindObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_file_t>, int)>();

  ffi.Pointer<ffi.Char> pdfioFileGetAuthor(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetAuthor(
      pdf,
    );
  }

  late final _pdfioFileGetAuthorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetAuthor');
  late final _pdfioFileGetAuthor = _pdfioFileGetAuthorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  int pdfioFileGetCreationDate(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetCreationDate(
      pdf,
    );
  }

  late final _pdfioFileGetCreationDatePtr =
      _lookup<ffi.NativeFunction<time_t Function(ffi.Pointer<pdfio_file_t>)>>(
          'pdfioFileGetCreationDate');
  late final _pdfioFileGetCreationDate = _pdfioFileGetCreationDatePtr
      .asFunction<int Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<ffi.Char> pdfioFileGetCreator(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetCreator(
      pdf,
    );
  }

  late final _pdfioFileGetCreatorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioFileGetCreator');
  late final _pdfioFileGetCreator = _pdfioFileGetCreatorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_array_t> pdfioFileGetID(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioFileGetID(
      pdf,
    );
  }
